Fix radio button default and alignment
* The toggle on the checkbox in the header wasn’t specific enough and
was affecting the default state of the radio buttons
* Update module and tests to use js prefixed class names rather than
elements
*  Tweak alignment of radio buttons by removing padding and adding
margins

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -190,6 +190,10 @@ main a {
   border-bottom: 1px solid #ccc;
 }
 
+.radio.table-header-radio {
+  padding-top: 0;
+}
+
 /* Selectable rows
    ==========================================================================
    Fill table cell with label to make the whole cell clickable.
@@ -221,7 +225,7 @@ main a {
   vertical-align: top;
 
   input {
-    margin-top: 16px;
+    margin-top: 18px;
   }
 }
 
